...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walkthrough_welcome_description_text_view"
        android:importantForAccessibility="no" />

      <Button
        android:id="@+id/walkthrough_welcome_next_button"
        style="@style/StateButtonActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="@{(v) -> presenter.changePage()}"
        android:text="@string/next"
...
